--- a/package.json
+++ b/package.json
@@ -1,27 +1,59 @@
-{
-  "name": "Notification",
-  "version": "0.0.1",
-  "description": "Notification Module",
+"private": true,
   "main": "Email.js",
-  "dependencies": {
-    "nodemailer": "^1.3.2"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "Test.js"
-  },
+  "name": "Notification",
+  "description": "This package serves to give notification to the Buzz System",
+  "version": "0.0.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/BuzzSpaceB/Notification"
   },
-  "keywords": [
-    "Notification",
-    "Email"
-  ],
-  "author": "Notification-B Team",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/BuzzSpaceB/Notification/issues"
   },
-  "homepage": "https://github.com/BuzzSpaceB/Notification"
+  "homepage": "https://github.com/BuzzSpaceB/Notification",
+  "contributors": [
+    {
+      "name": "Matthew Gouws",
+      "email": "matty.gouws@gmail.com"
+    },
+    {
+      "name": "Liz Joseph",
+      "email": "lizjoseph@tuks.co.za"
+    },
+    {
+      "name": "Andre Calitz",
+      "email": "andcalitz@gmail.com"
+    },
+	},
+    {
+      "name": "Izak Blom",
+      "email": "u13126777@tuks.co.za"
+    },
+	},
+    {
+      "name": "Xoliswa Ntshingila",
+      "email": "x.ntshingila@gmail.com"
+    }
+  ],
+  "dependencies": {
+      "body-parser": "~1.12.0",
+      "broadway": "^0.3.6",
+      "cookie-parser": "~1.3.4",
+      "debug": "~2.1.1",
+      "ejs": "~2.3.1",
+      "electrolyte": "0.0.6",
+      "express": "~4.12.2",
+      "handlebars": "^3.0.0",
+      "jsreport": "^0.2.10",
+      "ldapjs": "^0.7.1",
+      "mongoose": "^3.8.25",
+      "morgan": "~1.5.1",
+      "node-aop": "^0.1.0",
+      "node-cache": "^1.1.0",
+      "nodemailer": "^1.3.2",
+      "react": "^0.13.1",
+      "react-bootstrap": "^0.17.0",
+      "scribe-js": "^2.0.4",
+      "serve-favicon": "~2.2.0"
+    }
 }
