Added node-Schedule to Package.JSON Started working on DailyNotifs to send Daily notifications at Midnight using Node-Schedule (CRON Based)

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
       "react": "^0.13.1",
       "react-bootstrap": "^0.17.0",
       "scribe-js": "^2.0.4",
-      "serve-favicon": "~2.2.0"
+      "serve-favicon": "~2.2.0",
+	  "node-schedule": "^0.2.6"
     }
 }
