--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     }
   ],
   "dependencies": {
-      "body-parser": "^1.12.2",
+	"body-parser": "^1.12.2",
     "broadway": "^0.3.6",
     "cookie-parser": "^1.3.4",
     "debug": "^2.1.3",
@@ -55,6 +55,7 @@
     "react": "^0.13.1",
     "react-bootstrap": "^0.17.0",
     "scribe-js": "^2.0.4",
-    "serve-favicon": "^2.2.0"
+    "serve-favicon": "^2.2.0",
+	"smtp-connection": "^1.2.0"
     }
 }
