--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     }
   ],
   "dependencies": {
-    "ldapjs": "^0.7.1",
     "mongoose": "^3.9.7",
     "nodemailer": "^1.3.2",
     "nodeunit": "^0.9.1",
+	"smtp-connection": "^1.2.0"
     }
 }
