--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mongoose": "^3.9.7",
     "nodemailer": "^1.3.2",
     "nodeunit": "^0.9.1",
+	"node-schedule": "^0.2.6",
 	"smtp-connection": "^1.2.0"
     }
 }
