--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "nodemailer": "^1.3.2",
     "nodeunit": "^0.9.1",
 	"node-schedule": "^0.2.6",
-	"smtp-connection": "^1.2.0"
+	"smtp-connection": "^1.2.0",
+	"DatabaseStuff": "git://github.com/BuzzSpaceB/DatabaseStuff#master"
     }
 }
